// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-describedby="<removed>"
    id="<removed>"
    type="radio"
    value="value"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Inline 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Kontaktes på e-post?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Bekreft om du ønsker å bli kontaktet per e-post.
  </p>
  <div style="display: flex; flex-wrap: wrap; gap: var(--ds-size-6);">
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="my-inline"
        type="radio"
        value="ja"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        Ja
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        id="<removed>"
        name="my-inline"
        type="radio"
        value="nei"
      >
      <label
        data-weight="regular"
        for="<removed>"
      >
        Nei
      </label>
    </ds-field>
  </div>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-describedby="<removed>"
    id="<removed>"
    type="radio"
    value="value"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Radio
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Description
  </div>
</ds-field>
`;

exports[`Radio In Color Context 1`] = `
<div
  data-color="accent"
  data-variant="tinted"
>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      checked
      id="<removed>"
      type="radio"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="<removed>"
    >
      Description
    </div>
  </ds-field>
</div>
`;
